--- a/style.css
+++ b/style.css
@@ -56,11 +56,15 @@ img {
         font-size: 24pt !important;
         font-family: 'POPPINS';
         color: #fff;
-        left: 57%;
+        left: 60%;
         top: 77%;
         position: absolute;
         font-weight: 700;
         letter-spacing: 4px;
     }
+
+    #cuentaRegresiva2{
+        left: 57% !important;
+    }  
 
 }
